k8s/db.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-sts
  namespace: kiii-proekt
spec:
  serviceName: db-service
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
        namespace: kiii-proekt
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: kiii-proekt
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
