k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
  namespace: kiii-proekt
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
          - path: /authors
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                    number: 80
          - path: /bookDetails
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
